--- a/src/client/styles/form.scss
+++ b/src/client/styles/form.scss
@@ -1,12 +1,18 @@
 form {
-    border: 1px solid #545454;
-    border-radius: 3px;
-    padding: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
+  border: 3px solid #b3b3b3;
+  border-radius: 2em;
+  padding: 40px;
 }
 
 input {
-    padding: 5px 20px;
-    width: 100%;
-    line-height: 16px;
-    margin: 10px 0;
+  border-width: 0.1px;
+  padding: 10px;
+  width: calc(100% - 50px);
+  line-height: 16px;
+  margin: 10px 0;
+  box-shadow: 12px 11px 20px 0px #96909080;
 }
