--- a/src/client/styles/header.scss
+++ b/src/client/styles/header.scss
@@ -1,5 +1,28 @@
 header {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 40px;
+  display: flex;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(158, 157, 157);
+  font-size: 2.5em;
+  justify-content: space-between;
+  padding: 40px;
+}
+
+.status {
+  border-style: solid;
+  border-width: thick;
+  border-radius: 0.2em;
+  font-size: 1em;
+  padding: 5px;
+
+  &.online {
+    //   @extend .status;
+    color: rgb(143, 218, 143);
+    background-color: rgb(62, 170, 12);
+  }
+
+  &.offline {
+    //   @extend .status;
+    color: rgb(185, 0, 0);
+    background-color: rgb(187, 125, 125);
+  }
 }
