--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -9,10 +9,10 @@
 
         <header>
             <div class="">
-                Logo
+                NLP
             </div>
-            <div class="">
-                navigation
+            <div class="status online">
+                ONLINE
             </div>
         </header>
 
@@ -20,7 +20,7 @@
             <section>
                 <form class="" onsubmit="return Client.handleSubmit(event)">
                     <input id="name" type="text" name="input" value="" onblur="onBlur()" placeholder="Name">
-                    <input type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
+                    <input type="submit" name="" value="Analyze" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
                 </form>
             <section>
 
