--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -12,3 +12,11 @@ section {
     max-width: 800px;
     margin: 100px auto;
 }
+
+#headline{
+    text-align: center;
+    margin-top: 50px;
+    font-size: 2em;
+    font-weight: bolder;
+    font-family: monospace;
+}
