--- a/src/client/styles/form.scss
+++ b/src/client/styles/form.scss
@@ -10,9 +10,16 @@ form {
 
 input {
   border-width: 0.1px;
+  border-radius: 1em;
   padding: 10px;
   width: calc(100% - 50px);
   line-height: 16px;
   margin: 10px 0;
   box-shadow: 12px 11px 20px 0px #96909080;
+}
+#testText {
+  @extend input;
+  height: 100px;
+  
+
 }
