nameChecker function for on-type realtime analysis of input type; setup of a combined caller function from the alyien api

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -29,13 +29,20 @@
             <section>
 
             <section>
-                <strong>Form Results:</strong>
-                <div id="results"></div>
+                <strong>Analysis Results</strong>
+                <hr>
+                <div id="results">
+
+                </div>
             </section>
         </main>
 
         <footer>
-            <p>This is a footer</p>
+            <br>
+            <p>NLP service provided through <a target="_blank" href="https://aylien.com/">Aylien.com</a></p>
+            <a href="https://www.linkedin.com/in/alitehami/" target="_blank"
+            >&COPY; Ali Tehami 2020</a>
+
         </footer>
         <script>
             // Check that service workers are supported
