--- a/src/client/styles/footer.scss
+++ b/src/client/styles/footer.scss
@@ -2,4 +2,9 @@ footer {
     background: #252525;
     color: #e7e7e7;
     height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column;
+    padding: 5px;
 }
