Server running and able to process the Aylien API data (POST + GET from frontend)

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -44,7 +44,9 @@
             >&COPY; Ali Tehami 2020</a>
 
         </footer>
-        <script>
+
+
+        <!-- <script>
             // Check that service workers are supported
             if ('serviceWorker' in navigator) {
                 // Use the window load event to keep the page load performant
@@ -52,6 +54,8 @@
                     navigator.serviceWorker.register('/service-worker.js');
                 });
             }
-           </script>
+           </script> -->
+
+
     </body>
 </html>
