the dataCleaner() function fully working and are applying text formatting & extraction

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -24,7 +24,8 @@
                     <!-- <input id="name" type="text" name="input" value="" onblur="onBlur()" placeholder="Name"> -->
                     <textarea id= "testText" name="input" 
                     placeholder="Hello!! type some text here.. or drop a web link.."></textarea>
-                    <input type="submit" name="" value="Analyze" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
+                    <input type="submit" name="submit" value="Analyze" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
+                    <input type="button" name="last" value="Show me the Last result" onclick="return Client.handleGetLast(event)" onsubmit="return Client.handleGetLast(event)">
                 </form>
             <section>
 
